# plastex

./: .cvsignore  .dir-locals.el  .dockerignore  .envrc  .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  Dockerfile  HTML5_TODO  INSTALL  LICENSE  Makefile  PKG-INFO  README  README.md  TODO  default.nix  index.html  params.json  pytest.ini  requirements.txt  requirements_tests.txt  setup.cfg  setup.py  shell.nix  test.py  test0.py  tester.py  tox.ini  travis.yml
.github/workflows/: test.yaml
Doc/: Makefile  README  README.md  about.tex  command.tex  config-api.tex  context-api.tex  debugging.tex  document.tex  dom-api.tex  imager-api.tex  index.html  intro.tex  macros-api.tex  macros.tex  parsing-faq.tex  plastex.tex  plugins.tex  publish  renderer-api.tex  renderers.tex  tex-api.tex  zpttutorial.tex
Doc/example_plugins/my_renderer_plugin/: pyproject.toml
Doc/example_plugins/my_renderer_plugin/src/plastex_markdown_renderer/Renderers/Markdown/: Math.jinja2s  Sectioning.jinja2s  Text.jinja2s  __init__.py
Doc/example_plugins/my_renderer_plugin/src/plastex_markdown_renderer/Renderers/Markdown/Themes/default/: default-layout.jinja2
Doc/example_plugins/my_templates_plugin/: pyproject.toml
Doc/example_plugins/my_templates_plugin/src/plastex_div_quote/templates/: Quote.jinja2
Doc/getting_started/: Makefile  getting_started.cfg  getting_started.tex
Doc/texinputs/: distutils.sty  manual.cls  python.sty
docker/: entry-point.sh  operation.sh  run.sh
getting_started/: index.html
getting_started/styles/: getting_started.css  pygments.css  theme-white.css
hooks/: build
licenses/: README  S5.license  ent.license  pyuca.license  simpletal.license  unicode.license
misc/: dependencies.nix  distributions.nix  docker.mk  git.mk  install.nix  jinja2-ansible-filters.nix  nix.mk  plastex.nix  pyenv.mk
nix/: jinja2-ansible-filters.nix  plastex.nix
plasTeX/: .plasTeXrc.swp  Categories.py  Compile.py  Config.py  ConfigManager.py  Context.py  Filenames.py  Logging.py  Node.py  PackageResource.py  Renderer.py  TALUtils.py  TeX.py  Token.py  Tokenizer.py  Utils.py  __init__.py  client.py  dictutils.py  encoding.py  i18n.xml  plasTeXrc  plastex  sitecustomize.py  tralics_driver.py  tree_cleaner.py
plasTeX.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plasTeX/Base/: __init__.py
plasTeX/ConfigManager/: Boolean.py  Compound.py  Counted.py  Directories.py  Files.py  Float.py  Generic.py  Integer.py  Multi.py  String.py  __init__.py  dictutils.py
plasTeX/DOM/: __init__.py
plasTeX/Imagers/: OSXCoreGraphics.py  __init__.py  cgpdfpng  dvi2bitmap.py  dvipng.py  dvisvgm.py  gsdvipng.py  gspdfpng.py  pdf2svg.py  pdftoppm.py  tralics.py
plasTeX/Renderers/: __init__.py
plastex/: index.html  module-plasTeX-ConfigManager.html  module-plasTeX-Context.html  module-plasTeX-DOM.html  module-plasTeX-Imagers.html  module-plasTeX-Renderers.html  module-plasTeX-TeX.html  module-plasTeX.html  sec-arrays.html  sec-command-line.html  sec-complexdoc.html  sec-config-document.html  sec-config-files.html  sec-config-html5.html  sec-config-images.html  sec-config-links.html  sec-configuration-api.html  sec-context-api.html  sec-context-language.html  sec-contextmacros.html  sec-document.html  sec-dom-api.html  sec-general-options.html  sec-html5-pkg.html  sec-html5.html  sec-imager-api.html  sec-inimacros.html  sec-links.html  sec-lists.html  sec-logging-levels.html  sec-macroclasses.html  sec-macros-api.html  sec-macros.html  sec-packages.html  sec-paragraphs.html  sec-plugins.html  sec-pt.html  sec-renderable.html  sec-sections.html  sec-simple-renderer-ex.html  (+61 more)
plastex/styles/: theme-blue.css  theme-green.css
poo/: pr403.tex
sample/: alt.css  sample.cfg  sample.tex
sample/sample/: index.html  sect0001.html  sect0002.html  sect0003.html  sect0004.html
sample/sample_single/: index.html
sample2e/: index.html  sample2e.txt  sect0001.html  sect0002.html
sample2e/icons/: imgadjust.js
tmp/: config  test.tex
tutorials/: getting-started.txt  index.html
unittests/: ActiveChars.py  ArgumentParsing.py  CSSStyles.py  CategoriesAndChars.py  CharSub.py  Config.py  ConfigFileReading.py  Counter.py  Crossref.py  CustomRenderer.py  Document.py  Encoding.py  FunctionalPackageResource.py  FunctionalTests.py  If.py  Input.py  LaTeXError.py  Let.py  LoadPackages.py  LoadTemplates.py  NewCommands.py  Numbers.py  PackageResources.py  Primitives.py  Proof.py  Source.py  TeXStreamTests.py  Theorem.py  TikzTikzcd.py  Tokenizer.py  Verbatim.py  accents.py  angle_brackets.py  at_letter.py  empty_article.tex  ensuremath.py  enumerate.py  error_reporting.py  examplePackage.py  extra_tpl.py  (+8 more)
unittests/DOM/: Attr.py  CharacterData.py  Document.py  Element.py  Node.py  Text.py
unittests/Doc/: intro.py
(+416 files in other folders)
