[metadata]
name = plasTeX
description = LaTeX document processing framework
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.1
author = Kevin D. Smith
author_email = Kevin.Smith@sas.com
url = http://plastex.github.io/plastex/
classifiers=
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
python_requires= >=3.6
packages = 
  plasTeX
  plasTeX.Base
  plasTeX.Base.LaTeX
  plasTeX.Base.TeX
  plasTeX.DOM
  plasTeX.Imagers
  plasTeX.Packages
  plasTeX.Renderers
  plasTeX.Renderers.XHTML
  plasTeX.Renderers.XHTML.Themes
  plasTeX.Renderers.XHTML.Themes.default
  plasTeX.Renderers.XHTML.Themes.default.icons
  plasTeX.Renderers.XHTML.Themes.default.styles
  plasTeX.Renderers.XHTML.Themes.python
  plasTeX.Renderers.XHTML.Themes.python.icons
  plasTeX.Renderers.XHTML.Themes.plain
  plasTeX.Renderers.XHTML.Themes.minimal
  plasTeX.Renderers.HTML5
  plasTeX.Renderers.HTML5.Themes
  plasTeX.Renderers.HTML5.Themes.default
  plasTeX.Renderers.HTML5.Themes.minimal
  plasTeX.Renderers.HTML5.Themes.default.styles
  plasTeX.Renderers.HTML5.Themes.default.js
  plasTeX.Renderers.DocBook
  plasTeX.Renderers.DocBook.Themes
  plasTeX.Renderers.DocBook.Themes.default
  plasTeX.Renderers.DocBook.Themes.book
  plasTeX.Renderers.DocBook.Themes.article
  plasTeX.Renderers.ManPage
  plasTeX.Renderers.Text
  plasTeX.Renderers.PageTemplate
  plasTeX.Renderers.PageTemplate.simpletal
  plasTeX.Renderers.S5
  plasTeX.Renderers.S5.Themes
  plasTeX.Renderers.S5.Themes.default
  plasTeX.Renderers.S5.Themes.default.ui
  plasTeX.Renderers.S5.Themes.default.ui.default
zip_safe = False
include_package_data = True
install_requires = 
  Jinja2 >= 2.10.1
  Unidecode >= 0.4.21
  Pillow >= 7
  typing-extensions >= 3.7

[options.package_data]
plasTeX = *.xml, plasTeXrc
plasTeX.Base.LaTeX = *.xml, *.txt
plasTeX.Renderers.DocBook = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.DocBook.Themes.default = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.DocBook.Themes.book = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.DocBook.Themes.article = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.XHTML = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.XHTML.Themes.default = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.XHTML.Themes.default.icons = *.gif, *.png, *.jpg, *.jpeg, *.js, *.htc, *.svg
plasTeX.Renderers.XHTML.Themes.default.styles = *.css
plasTeX.Renderers.XHTML.Themes.minimal = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.XHTML.Themes.python = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s, *.css
plasTeX.Renderers.XHTML.Themes.python.icons = *.gif, *.png, *.jpg, *.jpeg, *.js, *.htc, *.svg
plasTeX.Renderers.XHTML.Themes.plain = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.HTML5 = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.HTML5.Themes.default = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s, *.gif, *.png, *.jpg, *.jpeg, *.js, *.htc, *.svg
plasTeX.Renderers.HTML5.Themes.minimal = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.HTML5.Themes.default.styles = *.css
plasTeX.Renderers.HTML5.Themes.default.js = *.js
plasTeX.Renderers.S5 = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.S5.Themes.default = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s
plasTeX.Renderers.S5.Themes.default.ui.default = *.html, *.htm, *.xml, *.zpt, *.zpts, *.jinja2, *.jinja2s, *.css, *.gif, *.png, *.jpg, *.jpeg, *.js, *.htc, *.svg, *.css

[options.entry_points]
console_scripts = 
  plastex = plasTeX.client:plastex
   
