[project]
name = "plastex_div_quote" 
version = "1.0.0" 
description = "A sample plasTeX plugin bringing a template file." 
requires-python = ">=3.7"
dependencies = ["plastex>=3.0"]

[tool.setuptools.package-data]
plastex_markdown_renderer = ["**/*.jinja2", "**/*.jinja2s"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
